5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1582_1327.log
== TEST (2019-03-12 21:15:54) 
-- CODE:
print 35
-- ERROR:
File "XXXX", line 1
    print 35
           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(35)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:15:58) 
-- CODE:
print 35
-- EXECUTION TIME:
0.158429
-- ERROR:
  File "/home/codebench/codes/1582/1327/main.py", line 1
    print 35
           ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:16:09) 
-- CODE:
print (35)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:16:21) 
-- CODE:
print (35)
-- EXECUTION TIME:
0.203834
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:01:44) 
-- CODE:
print (50-55)
-- OUTPUT:
-5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:01:55) 
-- CODE:
print (90-55)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:01:58) 
-- CODE:
print (90-55)
-- EXECUTION TIME:
0.139354
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
